--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "fs-extra": "^10.1.0",
-    "image-js": "^0.35.1"
+    "image-js": "^0.35.1",
+    "lodash": "^4.17.21"
   }
 }
